Add postprocess outputs only test case

--- a/python/sdk/test/transformer/standard_transformer_with_feast.yaml
+++ b/python/sdk/test/transformer/standard_transformer_with_feast.yaml
@@ -38,7 +38,7 @@ transformerConfig:
             - updateColumns:
                 - column: customer_id
                   expression: customer_id
-            - selectColumns: ["customer_id", "merlin_test_driver_id" ,"name", "rank"]
+            - selectColumns: ["customer_id", "merlin_test_driver_id", "rank"]
       - tableJoin:
           leftTable: driver_table
           rightTable: driver_feature_table
