--- a/ui/src/services/transformer/testdata/standard_transformer.yaml
+++ b/ui/src/services/transformer/testdata/standard_transformer.yaml
@@ -24,6 +24,19 @@ transformerConfig:
               - name: merlin_test_driver_features:test_float
                 valueType: FLOAT
                 defaultValue: '0'
+          - tableName: driver_feature_table_2
+            project: merlin
+            entities:
+              - name: merlin_test_driver_id
+                valueType: STRING
+                jsonPath: $.drivers[*].id
+            features:
+              - name: merlin_test_driver_features:test_int32
+                valueType: INT32
+                defaultValue: '-1'
+              - name: merlin_test_driver_features:test_float
+                valueType: FLOAT
+                defaultValue: '0'
     transformations:
       - tableTransformation:
           inputTable: driver_table
