--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -162,6 +162,10 @@ jobs:
       - uses: actions/setup-go@v2
         with:
           go-version: 1.13
+      - name: Install dependencies
+        run: |
+          make setup
+          make init-dep-api
       - name: Test API files
         env:
           POSTGRES_HOST: localhost
