Pin mypy version

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -127,7 +127,7 @@ jobs:
       - name: Install dependencies
         working-directory: ./python/sdk
         run: |
-          pip install mypy pipenv
+          pip install mypy==0.812 pipenv
           make setup
       - name: Unit test Python SDK
         env:
