--- a/api/cmd/transformer/.env.sample
+++ b/api/cmd/transformer/.env.sample
@@ -1,17 +1,19 @@
-LOG_LEVEL=DEBUG
+LOG_LEVEL=ERROR
 
-STANDARD_TRANSFORMER_CONFIG={"transformerConfig":{"preprocess":{"inputs":[{"variables":[{"name":"customer_id","jsonPath":"$$.customer_id"},{"name":"customer_name","jsonPath":"$$.customer_name"}]},{"tables":[{"name":"driver_table","baseTable":{"fromJson":{"jsonPath":"$$.drivers[*]","addRowNumber":true}},"columns":[]}]},{"feast":[{"tableName":"driver_feature_table","project":"merlin","entities":[{"name":"merlin_test_driver_id","valueType":"STRING","jsonPath":"$$.drivers[*].id"}],"features":[{"name":"merlin_test_driver_features:test_int32","valueType":"INT32","defaultValue":"-1"},{"name":"merlin_test_driver_features:test_float","valueType":"FLOAT","defaultValue":"0"}]}]}],"transformations":[{"tableTransformation":{"inputTable":"driver_table","outputTable":"driver_table","steps":[{"sort":[{"column":"row_number","order":"DESC"}]},{"renameColumns":{"row_number":"rank","id":"merlin_test_driver_id"}},{"updateColumns":[{"column":"customer_id","expression":"customer_id"}]},{"selectColumns":["customer_id","merlin_test_driver_id","rank"]}]}},{"tableJoin":{"leftTable":"driver_table","rightTable":"driver_feature_table","outputTable":"result_table","how":"LEFT","onColumn":"merlin_test_driver_id"}},{"tableTransformation":{"inputTable":"result_table","outputTable":"result_table","steps":[{"sort":[{"column":"rank","order":"ASC"}]},{"renameColumns":{"merlin_test_driver_id":"driver_id"}},{"selectColumns":["rank","driver_id","customer_id","merlin_test_driver_features:test_int32","merlin_test_driver_features:test_float"]}]}}],"outputs":[{"jsonOutput":{"jsonTemplate":{"fields":[{"fieldName":"instances","fromTable":{"tableName":"result_table","format":"SPLIT"},"fields":[]}]}}}]},"postprocess":{"outputs":[{"jsonOutput":{"jsonTemplate":{"fields":[{"fieldName":"instances","fromJson":{"jsonPath":"$$.model_response.instances"},"fields":[]},{"fieldName":"instances_data","fromJson":{"jsonPath":"$$.model_response.instances.data"},"fields":[]},{"fieldName":"timestamp","expression":"Now()","fields":[]}]}}}]}}}
+STANDARD_TRANSFORMER_CONFIG={"transformerConfig":{"preprocess":{"inputs":[{"variables":[{"name":"customer_id","jsonPath":"$$.customer_id"},{"name":"customer_name","jsonPath":"$$.customer_name"}]},{"tables":[{"name":"driver_table","baseTable":{"fromJson":{"jsonPath":"$$.drivers[*]","addRowNumber":true}},"columns":[]}]},{"feast":[{"tableName":"driver_feature_table","project":"merlin","entities":[{"name":"merlin_test_driver_id","valueType":"STRING","jsonPath":"$$.drivers[*].id"}],"features":[{"name":"merlin_test_driver_features:test_int32","valueType":"INT32","defaultValue":"-1"},{"name":"merlin_test_driver_features:test_float","valueType":"FLOAT","defaultValue":"0"}]}]}],"transformations":[{"tableTransformation":{"inputTable":"driver_table","outputTable":"driver_table","steps":[{"sort":[{"column":"row_number","order":"DESC"}]},{"renameColumns":{"row_number":"rank","id":"merlin_test_driver_id"}},{"updateColumns":[{"column":"customer_id","expression":"customer_id"}]},{"selectColumns":["customer_id","merlin_test_driver_id","rank"]}]}},{"tableJoin":{"leftTable":"driver_table","rightTable":"driver_feature_table","outputTable":"result_table","how":"LEFT","onColumn":"merlin_test_driver_id"}},{"tableTransformation":{"inputTable":"result_table","outputTable":"result_table","steps":[{"sort":[{"column":"rank","order":"ASC"}]},{"renameColumns":{"merlin_test_driver_id":"driver_id"}},{"selectColumns":["rank","driver_id","customer_id","merlin_test_driver_features:test_int32","merlin_test_driver_features:test_float"]}]}}],"outputs":[{"jsonOutput":{"jsonTemplate":{"fields":[{"fieldName":"instances","fromTable":{"tableName":"result_table","format":"SPLIT"},"fields":[]}]}}}]},"postprocess":{"outputs":[{"jsonOutput":{"jsonTemplate":{"fields":[{"fieldName":"instances","fromJson":{"jsonPath":"$$.model_response"},"fields":[]},{"fieldName":"instances_data","fromJson":{"jsonPath":"$$.model_response"},"fields":[]},{"fieldName":"timestamp","expression":"Now()","fields":[]}]}}}]}}}
 
-MERLIN_TRANSFORMER_MODEL_NAME=model
+MERLIN_TRANSFORMER_MODEL_NAME=echo-2
 MERLIN_TRANSFORMER_MODEL_PREDICT_URL=localhost:8081
 MERLIN_TRANSFORMER_PORT=8080
+MODEL_HYSTRIX_RETRY_COUNT=0
 
 FEAST_SERVING_URL=localhost:6566
 FEAST_FEATURE_STATUS_MONITORING_ENABLED=true
 FEAST_FEATURE_VALUE_MONITORING_ENABLED=true
 FEAST_BATCH_SIZE=50
 FEAST_CACHE_TTL=60s
-FEAST_CACHE_ENABLED=true
+FEAST_CACHE_ENABLED=false
+FEAST_HYSTRIX_RETRY_COUNT=5
 
 HTTP_SERVER_TIMEOUT=30s
 HTTP_CLIENT_TIMEOUT=15s
