Add UDF in feast entity extractor

--- a/api/pkg/transformer/pipeline/testdata/valid_feast_expression.yaml
+++ b/api/pkg/transformer/pipeline/testdata/valid_feast_expression.yaml
@@ -36,6 +36,9 @@ transformerConfig:
               - name: customer_level
                 valueType: INT32
                 expression: customer_level
+              - name: hour_of_day
+                valueType: INT32
+                expression: Now().Hour()
             features:
               - name: customer_feature_1
                 valueType: INT64
