Add config for jaeger tracing and add more tracing span

--- a/.env.sample
+++ b/.env.sample
@@ -55,3 +55,9 @@ MLP_API_ENCRYPTION_KEY=password
 
 # MLFLOW_TRACKING_URL=
 NUM_OF_WORKERS=1
+
+JAEGER_AGENT_HOST=localhost
+JAEGER_AGENT_PORT=6831
+JAEGER_SAMPLER_TYPE=const
+JAEGER_SAMPLER_PARAM=1
+JAEGER_DISABLED=false
