--- a/api/cmd/transformer/.env.sample
+++ b/api/cmd/transformer/.env.sample
@@ -22,5 +22,6 @@ JAEGER_AGENT_HOST=localhost
 JAEGER_AGENT_PORT=6831
 JAEGER_SAMPLER_TYPE=const
 JAEGER_SAMPLER_PARAM=1
+JAEGER_DISABLED=false
 
 CACHE_SIZE_IN_MB=100
