--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -50,3 +50,11 @@ services:
     environment:
       - LAYOUT=BaseLayout
       - SWAGGER_JSON=/app/swagger.yaml
+  
+  
+  jaeger:
+    image: jaegertracing/all-in-one:latest
+    ports:
+      - "6831:6831/udp"
+      - "16686:16686"
+
