Make max allowed replica on UI configurable and set default value to 20

--- a/charts/merlin/values.yaml
+++ b/charts/merlin/values.yaml
@@ -35,6 +35,8 @@ merlin:
   # Comma-separated value of Docker registries that can be chosen in deployment page
   dockerRegistries: ghcr.io/gojek,ghcr.io/your-company
 
+  maxAllowedReplica: 20
+
   loggerDestinationURL: "http://yourDestinationLogger"
 
   queue:
