--- a/charts/merlin/templates/merlin-deployment.yaml
+++ b/charts/merlin/templates/merlin-deployment.yaml
@@ -113,6 +113,8 @@ spec:
             value: "{{ .Values.merlin.feastCoreApi.apiHost }}"
           - name: REACT_APP_DOCKER_REGISTRIES
             value: "{{ .Values.merlin.dockerRegistries }}"
+          - name: REACT_APP_MAX_ALLOWED_REPLICA
+            value: "{{ .Values.merlin.maxAllowedReplica }}"
           - name: IMG_BUILDER_CLUSTER_NAME
             value: "{{ .Values.merlin.imageBuilder.clusterName }}"
           - name: IMG_BUILDER_BUILD_CONTEXT_URI
