--- a/charts/merlin/templates/merlin-deployment.yaml
+++ b/charts/merlin/templates/merlin-deployment.yaml
@@ -143,6 +143,8 @@ spec:
           - name: IMG_BUILDER_PREDICTION_JOB_CONTEXT_SUB_PATH
             value: "{{ .Values.merlin.imageBuilder.predictionJobContextSubPath }}"
           {{- end }}
+          - name: IMG_BUILDER_RETENTION
+            value: "{{ .Values.merlin.imageBuilder.retention }}"
           - name: FEAST_SERVING_URL
             value: "{{ .Values.merlin.transformer.feast.servingURL }}"
           - name: FEAST_CORE_URL
