--- a/python/batch-predictor/environment.yaml
+++ b/python/batch-predictor/environment.yaml
@@ -2,6 +2,6 @@ name: merlin-model
 dependencies:
   - python=3.7
   - pip:
-      - -r file:requirements.txt
+      - -r requirements.txt
       - --extra-index-url=https://test.pypi.org/simple
       - --trusted-host=test.pypi.org
