--- a/charts/merlin/templates/merlin-deployment.yaml
+++ b/charts/merlin/templates/merlin-deployment.yaml
@@ -97,7 +97,7 @@ spec:
           {{- end }}
           {{- if .Values.merlin.docsURL }}
           - name: REACT_APP_MERLIN_DOCS_URL
-            value: {{ .Values.merlin.docsURL | toJson | quote  }}
+            value: {{ .Values.merlin.docsURL | toJson | quote }}
           {{- end }}
           - name: REACT_APP_ALERT_ENABLED
             value: "{{ .Values.merlin.alert.enabled }}"
@@ -143,8 +143,10 @@ spec:
           - name: IMG_BUILDER_PREDICTION_JOB_CONTEXT_SUB_PATH
             value: "{{ .Values.merlin.imageBuilder.predictionJobContextSubPath }}"
           {{- end }}
-          - name: FEAST_SERVING_URL
-            value: "{{ .Values.merlin.transformer.feast.servingURL }}"
+          - name: DEFAULT_FEAST_SERVING_ENDPOINT
+            value: "{{ .Values.merlin.transformer.feast.defaultServingEndpoint }}"
+          - name: FEAST_SERVING_ENDPOINTS
+            value: {{ .Values.merlin.transformer.feast.servingEndpoints | toJson | quote }}
           - name: FEAST_CORE_URL
             value: "{{ .Values.merlin.transformer.feast.coreURL }}"
           - name: FEAST_CORE_AUTH_AUDIENCE
