--- a/ui/package.json
+++ b/ui/package.json
@@ -48,7 +48,7 @@
     "eject": "react-scripts eject",
     "version-from-git": "../scripts/vertagen/vertagen.sh"
   },
-  "proxy": "http://localhost:8080/v1",
+  "proxy": "http://localhost:8080",
   "eslintConfig": {
     "extends": "react-app"
   },
