Transformer read feast serving endpoint from YAML spec

--- a/api/cmd/transformer/.env.sample
+++ b/api/cmd/transformer/.env.sample
@@ -7,7 +7,8 @@ MERLIN_TRANSFORMER_MODEL_PREDICT_URL=localhost:8081
 MERLIN_TRANSFORMER_PORT=8080
 MODEL_HYSTRIX_RETRY_COUNT=0
 
-FEAST_SERVING_URL=localhost:6566
+DEFAULT_FEAST_SERVING_ENDPOINT=localhost:6566
+FEAST_SERVING_ENDPOINTS=localhost:6566,localhost:6567
 FEAST_FEATURE_STATUS_MONITORING_ENABLED=true
 FEAST_FEATURE_VALUE_MONITORING_ENABLED=true
 FEAST_BATCH_SIZE=50
