--- a/charts/merlin/values.yaml
+++ b/charts/merlin/values.yaml
@@ -63,6 +63,7 @@ merlin:
     timeout: "30m"
     contextSubPath: "python/pyfunc-server"
     predictionJobContextSubPath: "python/batch-predictor"
+    retention: "48h"
 
   vault:
     secretName: "vault-secret" # Must be bootstraped first.
