--- a/api/pkg/transformer/pipeline/testdata/valid_feast_preprocess.yaml
+++ b/api/pkg/transformer/pipeline/testdata/valid_feast_preprocess.yaml
@@ -20,10 +20,10 @@ transformerConfig:
             features:
               - name: driver_feature_1
                 valueType: INT64
-                defaultValue: '0'
+                defaultValue: "0"
               - name: driver_feature_2
                 valueType: INT64
-                defaultValue: '0'
+                defaultValue: "0"
     transformations:
       - tableTransformation:
           inputTable: driver_table
@@ -38,7 +38,7 @@ transformerConfig:
             - updateColumns:
                 - column: customer_id
                   expression: customer_id
-            - selectColumns: ["customer_id", "driver_id" ,"name", "rank"]
+            - selectColumns: ["customer_id", "driver_id", "name", "rank"]
       - tableJoin:
           leftTable: driver_table
           rightTable: driver_feature_table
@@ -52,7 +52,14 @@ transformerConfig:
             - sort:
                 - column: "rank"
                   order: ASC
-            - selectColumns: [ "rank", "driver_id", "customer_id", "driver_feature_1", "driver_feature_2" ]
+            - selectColumns:
+                [
+                  "rank",
+                  "driver_id",
+                  "customer_id",
+                  "driver_feature_1",
+                  "driver_feature_2",
+                ]
     outputs:
       - jsonOutput:
           jsonTemplate:
