--- a/api/pkg/transformer/pipeline/testdata/valid_preprocess_input_and_transformation.yaml
+++ b/api/pkg/transformer/pipeline/testdata/valid_preprocess_input_and_transformation.yaml
@@ -11,7 +11,7 @@ transformerConfig:
             features:
               - name: entity_1:feature_1
                 valueType: INT64
-                defaultValue: '0'
+                defaultValue: "0"
           - tableName: entity_2_table
             project: default
             entities:
@@ -21,7 +21,7 @@ transformerConfig:
             features:
               - name: entity_2
                 valueType: INT64
-                defaultValue: '0'
+                defaultValue: "0"
       - tables:
           - name: entity_3_table
             baseTable:
