--- a/charts/merlin/templates/merlin-deployment.yaml
+++ b/charts/merlin/templates/merlin-deployment.yaml
@@ -143,9 +143,9 @@ spec:
           - name: IMG_BUILDER_PREDICTION_JOB_CONTEXT_SUB_PATH
             value: "{{ .Values.merlin.imageBuilder.predictionJobContextSubPath }}"
           {{- end }}
-          - name: DEFAULT_FEAST_SERVING_ENDPOINT
+          - name: DEFAULT_FEAST_SERVING_URL
             value: "{{ .Values.merlin.transformer.feast.defaultServingEndpoint }}"
-          - name: FEAST_SERVING_ENDPOINTS
+          - name: FEAST_SERVING_URLS
             value: {{ .Values.merlin.transformer.feast.servingEndpoints | toJson | quote }}
           - name: FEAST_CORE_URL
             value: "{{ .Values.merlin.transformer.feast.coreURL }}"
