Little refactoring and add validation on version endpoint api validation
- Rename FeastServingEndpoint to FeastServingURL
- Reformat some tansformer yaml spec
- Validate if servingURL provided by user is valid

--- a/charts/merlin/templates/merlin-deployment.yaml
+++ b/charts/merlin/templates/merlin-deployment.yaml
@@ -145,9 +145,9 @@ spec:
           {{- end }}
           - name: IMG_BUILDER_RETENTION
             value: "{{ .Values.merlin.imageBuilder.retention }}"
-          - name: DEFAULT_FEAST_SERVING_ENDPOINT
+          - name: DEFAULT_FEAST_SERVING_URL
             value: "{{ .Values.merlin.transformer.feast.defaultServingEndpoint }}"
-          - name: FEAST_SERVING_ENDPOINTS
+          - name: FEAST_SERVING_URLS
             value: {{ .Values.merlin.transformer.feast.servingEndpoints | toJson | quote }}
           - name: FEAST_CORE_URL
             value: "{{ .Values.merlin.transformer.feast.coreURL }}"
