--- a/charts/merlin/templates/merlin-deployment.yaml
+++ b/charts/merlin/templates/merlin-deployment.yaml
@@ -97,7 +97,7 @@ spec:
           {{- end }}
           {{- if .Values.merlin.docsURL }}
           - name: REACT_APP_MERLIN_DOCS_URL
-            value: {{ .Values.merlin.docsURL | toJson | quote  }}
+            value: {{ .Values.merlin.docsURL | toJson | quote }}
           {{- end }}
           - name: REACT_APP_ALERT_ENABLED
             value: "{{ .Values.merlin.alert.enabled }}"
@@ -145,8 +145,10 @@ spec:
           {{- end }}
           - name: IMG_BUILDER_RETENTION
             value: "{{ .Values.merlin.imageBuilder.retention }}"
-          - name: FEAST_SERVING_URL
-            value: "{{ .Values.merlin.transformer.feast.servingURL }}"
+          - name: DEFAULT_FEAST_SERVING_URL
+            value: "{{ .Values.merlin.transformer.feast.defaultServingURL }}"
+          - name: FEAST_SERVING_URLS
+            value: {{ .Values.merlin.transformer.feast.servingURLs | toJson | quote }}
           - name: FEAST_CORE_URL
             value: "{{ .Values.merlin.transformer.feast.coreURL }}"
           - name: FEAST_CORE_AUTH_AUDIENCE
