--- a/api/pkg/transformer/pipeline/testdata/valid_table_join_multiple_columns.yaml
+++ b/api/pkg/transformer/pipeline/testdata/valid_table_join_multiple_columns.yaml
@@ -1,9 +1,6 @@
 transformerConfig:
   preprocess:
     inputs:
-      - variables:
-          - name: customer_id
-            jsonPath: $.customer.id
       - tables:
           - name: driver_table
             baseTable:
@@ -18,10 +15,16 @@ transformerConfig:
                 valueType: STRING
                 jsonPath: $.drivers[*].id
             features:
+              - name: name
+                valueType: STRING
+                defaultValue: ""
               - name: driver_feature_1
                 valueType: INT64
                 defaultValue: "0"
               - name: driver_feature_2
+                valueType: INT64
+                defaultValue: "0"
+              - name: driver_feature_3
                 valueType: INT64
                 defaultValue: "0"
     transformations:
@@ -30,35 +33,33 @@ transformerConfig:
           outputTable: driver_table
           steps:
             - sort:
-                - column: "row_number"
+                - column: row_number
                   order: DESC
             - renameColumns:
                 row_number: rank
                 id: driver_id
-            - updateColumns:
-                - column: customer_id
-                  expression: customer_id
-            - selectColumns: ["customer_id", "driver_id", "name", "rank"]
+            - selectColumns: [driver_id, name, rank]
       - tableJoin:
           leftTable: driver_table
           rightTable: driver_feature_table
           outputTable: result_table
           how: LEFT
-          onColumns: [driver_id]
+          onColumns: [driver_id, name]
       - tableTransformation:
           inputTable: result_table
           outputTable: result_table
           steps:
             - sort:
-                - column: "rank"
+                - column: rank
                   order: ASC
             - selectColumns:
                 [
-                  "rank",
-                  "driver_id",
-                  "customer_id",
-                  "driver_feature_1",
-                  "driver_feature_2",
+                  rank,
+                  driver_id,
+                  name,
+                  driver_feature_1,
+                  driver_feature_2,
+                  driver_feature_3,
                 ]
     outputs:
       - jsonOutput:
@@ -67,4 +68,4 @@ transformerConfig:
               - fieldName: instances
                 fromTable:
                   tableName: result_table
-                  format: "SPLIT"
+                  format: SPLIT
