Rework image builder (#175)
* Lock pip version for pyfunc and batch predictor dependencies, also add activeDeadlineSeconds to image building job

* Add nodeselector and tolerations for image building job

* Fix broken import for imagebuilder mocks

* Image building job using node pool name as node selector

* Adding jobSpec for image builder that container volumes, volumesMount, tolerations, resources and nodeSelector information

* Only make image builder tolerations, nodeselectors and maxRetry configurable

Co-authored-by: Tio Pramayudi <tio.pramayudi@gojek.com>

--- a/charts/merlin/values.yaml
+++ b/charts/merlin/values.yaml
@@ -67,7 +67,16 @@ merlin:
     timeout: "30m"
     contextSubPath: "python/pyfunc-server"
     predictionJobContextSubPath: "python/batch-predictor"
+    kanikoImage: "gcr.io/kaniko-project/executor:v1.6.0"
     retention: "48h"
+    tolerations:
+      - key: "image-build-job"
+        operator: "Equal"
+        value: "true"
+        effect: "NoSchedule"
+    nodeSelectors:
+      cloud.google.com/gke-nodepool: "image-building-job-node-pool"
+    maxRetry: 3
 
   vault:
     secretName: "vault-secret" # Must be bootstraped first.
