--- a/charts/merlin/templates/merlin-deployment.yaml
+++ b/charts/merlin/templates/merlin-deployment.yaml
@@ -135,6 +135,14 @@ spec:
             value: "{{ .Values.merlin.imageBuilder.dockerRegistry }}"
           - name: IMG_BUILDER_TIMEOUT
             value: "{{ .Values.merlin.imageBuilder.timeout }}"
+          - name: IMG_BUILDER_KANIKO_IMAGE
+            value: "{{ .Values.merlin.imageBuilder.kanikoImage }}"
+          - name: IMG_BUILDER_TOLERATIONS
+            value: {{ .Values.merlin.imageBuilder.tolerations | toJson | quote }}
+          - name: IMG_BUILDER_NODE_SELECTORS
+            value: {{ .Values.merlin.imageBuilder.nodeSelectors | toJson | quote }}
+          - name: IMG_BUILDER_MAX_RETRY
+            value: "{{ .Values.merlin.imageBuilder.maxRetry }}"
           {{- if .Values.merlin.imageBuilder.contextSubPath }}
           - name: IMG_BUILDER_CONTEXT_SUB_PATH
             value: "{{ .Values.merlin.imageBuilder.contextSubPath }}"
