Fix autogenerated alerts: - Fix summary message - Update generated file to comply to PromQL

--- a/.gitignore
+++ b/.gitignore
@@ -183,3 +183,6 @@ Temporary Items
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/linux,macos,intellij,visualstudiocode,jupyternotebooks
+
+# Binary
+bin/
