--- a/python/pyfunc-server/Dockerfile
+++ b/python/pyfunc-server/Dockerfile
@@ -19,13 +19,12 @@ FROM ${BASE_IMAGE}
 ARG MODEL_URL
 ENV WORKERS 1
 
-RUN mkdir /prom_dir
 ENV prometheus_multiproc_dir=/prom_dir
 
 RUN gsutil cp -r ${MODEL_URL} .
 RUN /bin/bash -c ". activate merlin-model && \
     sed -i 's/pip$/pip=20.2.4/' /model/conda.yaml && \
     conda env update --name merlin-model --file /model/conda.yaml && \
-    python -m pyfunc-server/pyfuncserver --model_dir /model --dry_run"
+    cd pyfunc-server && python -m pyfuncserver --model_dir /model --dry_run"
 
 CMD ["/bin/bash", "./run.sh"]
