--- a/python/pyfunc-server/Dockerfile
+++ b/python/pyfunc-server/Dockerfile
@@ -21,10 +21,11 @@ ENV WORKERS 1
 
 ENV prometheus_multiproc_dir=/prom_dir
 
+WORKDIR /pyfunc-server
 RUN gsutil cp -r ${MODEL_URL} .
 RUN /bin/bash -c ". activate merlin-model && \
-    sed -i 's/pip$/pip=20.2.4/' /model/conda.yaml && \
-    conda env update --name merlin-model --file /model/conda.yaml && \
-    cd pyfunc-server && python -m pyfuncserver --model_dir /model --dry_run"
+    sed -i 's/pip$/pip=20.2.4/' model/conda.yaml && \
+    conda env update --name merlin-model --file model/conda.yaml && \
+    python -m pyfuncserver --model_dir model --dry_run"
 
 CMD ["/bin/bash", "./run.sh"]
