--- a/charts/merlin/requirements.yaml
+++ b/charts/merlin/requirements.yaml
@@ -1,11 +1,11 @@
 dependencies:
   - name: postgresql
-    repository: "@stable"
+    repository: https://charts.helm.sh/stable
     version: 7.0.0
     alias: merlin-postgresql
     condition: merlin-postgresql.enabled
   - name: postgresql
-    repository: "@stable"
+    repository: https://charts.helm.sh/stable
     version: 7.0.0
     alias: mlflow-postgresql
     condition: mlflow-postgresql.enabled
