Support feast direct storage retrieval

--- a/charts/merlin/templates/merlin-deployment.yaml
+++ b/charts/merlin/templates/merlin-deployment.yaml
@@ -157,6 +157,12 @@ spec:
             value: "{{ .Values.merlin.transformer.feast.defaultServingURL }}"
           - name: FEAST_SERVING_URLS
             value: {{ .Values.merlin.transformer.feast.servingURLs | toJson | quote }}
+          - name: FEAST_REDIS_CONFIG
+            value: {{ .Values.merlin.transformer.feast.redisStorage | toJson | quote }}
+          - name: FEAST_BIG_TABLE_CONFIG
+            value: {{ .Values.merlin.transformer.feast.bigtableStorage | toJson | quote }}
+          - name: DEFAULT_FEAST_SOURCE
+            value: BIGTABLE
           - name: FEAST_CORE_URL
             value: "{{ .Values.merlin.transformer.feast.coreURL }}"
           - name: FEAST_CORE_AUTH_AUDIENCE
