--- a/charts/merlin/values.yaml
+++ b/charts/merlin/values.yaml
@@ -109,14 +109,27 @@ merlin:
           {
             host: "online-serving-redis.feast.dev",
             label: "Online Serving with Redis",
+            source_type: "REDIS",
             icon: "redis",
           },
           {
             host: "online-serving-bigtable.feast.dev",
             label: "Online Serving with BigTable",
+            source_type: "BIGTABLE",
             icon: "bigtable",
           },
         ]
+      redisStorage:
+        serving_url: "online-serving-redis.feast.dev"
+        redis_addresses: 
+          - 10.1.1.2
+          - 10.1.1.3
+        pool_size: 5
+        max_retries: 0
+        read_timeout: "1s"
+        write_timeout: "1s"
+      bigtableStorage:
+        serving_url: "online-serving-bigtable.feast.dev"
       coreURL: core.feast.dev
       coreAuthAudience: core.feast.dev
       authEnabled: false
