Fix typo on the helm template

--- a/charts/merlin/templates/merlin-deployment.yaml
+++ b/charts/merlin/templates/merlin-deployment.yaml
@@ -157,7 +157,7 @@ spec:
             value: "{{ .Values.merlin.transformer.feast.defaultServingURL }}"
           - name: FEAST_SERVING_URLS
             value: {{ .Values.merlin.transformer.feast.servingURLs | toJson | quote }}
-          {{- if Values.merlin.transformer.feast.redisStorage }}
+          {{- if .Values.merlin.transformer.feast.redisStorage }}
           - name: FEAST_REDIS_CONFIG
             value: {{ .Values.merlin.transformer.feast.redisStorage | toJson | quote }}
           {{- end }}
