Remove default value redis and bigtable storage config (#196)
* Remove default value redis and bigtable storage config

* Only set storage env variable is the value is set

* Fix typo on the helm template

Co-authored-by: Tio Pramayudi <tio.pramayudi@gojek.com>

--- a/charts/merlin/templates/merlin-deployment.yaml
+++ b/charts/merlin/templates/merlin-deployment.yaml
@@ -157,10 +157,14 @@ spec:
             value: "{{ .Values.merlin.transformer.feast.defaultServingURL }}"
           - name: FEAST_SERVING_URLS
             value: {{ .Values.merlin.transformer.feast.servingURLs | toJson | quote }}
+          {{- if .Values.merlin.transformer.feast.redisStorage }}
           - name: FEAST_REDIS_CONFIG
             value: {{ .Values.merlin.transformer.feast.redisStorage | toJson | quote }}
+          {{- end }}
+          {{- if .Values.merlin.transformer.feast.bigtableStorage }}
           - name: FEAST_BIG_TABLE_CONFIG
             value: {{ .Values.merlin.transformer.feast.bigtableStorage | toJson | quote }}
+          {{- end }}
           - name: DEFAULT_FEAST_SOURCE
             value: {{ .Values.merlin.transformer.feast.defaultFeastSource}}
           - name: FEAST_CORE_URL
