--- a/api/pkg/transformer/pipeline/testdata/valid_table_join_multiple_columns.yaml
+++ b/api/pkg/transformer/pipeline/testdata/valid_table_join_multiple_columns.yaml
@@ -34,17 +34,29 @@ transformerConfig:
           steps:
             - sort:
                 - column: row_number
-                  order: DESC
+                  order: ASC
             - renameColumns:
                 row_number: rank
-                id: driver_id
-            - selectColumns: [driver_id, name, rank]
+                id: driver_id            
       - tableJoin:
           leftTable: driver_table
           rightTable: driver_feature_table
           outputTable: result_table
           how: LEFT
           onColumns: [driver_id, name]
+      - tableTransformation:
+          inputTable: result_table
+          outputTable: result_table
+          steps:
+            - updateColumns:
+              - column: is_weekend
+                expression: IsWeekend(driver_table.Col('eta'), 'Asia/Jakarta')
+              - column: day_of_week
+                expression: DayOfWeek(driver_table.Col('eta'), 'Asia/Jakarta')
+              - column: pretty_date
+                expression: ParseTimeStampsWithFormat(driver_table.Col('eta'), 'Asia/Jakarta', '2006-01-02')
+              - column: cumulative_fare
+                expression: CumulativeValue(driver_table.Col('fare'))
       - tableTransformation:
           inputTable: result_table
           outputTable: result_table
@@ -60,6 +72,10 @@ transformerConfig:
                   driver_feature_1,
                   driver_feature_2,
                   driver_feature_3,
+                  is_weekend,
+                  day_of_week,
+                  pretty_date,
+                  cumulative_fare
                 ]
     outputs:
       - jsonOutput:
