--- a/.github/workflows/publish-python-sdk.yml
+++ b/.github/workflows/publish-python-sdk.yml
@@ -20,5 +20,7 @@ jobs:
           TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
         working-directory: ./python/sdk
         run: |
+          tag=$(git describe --tags --always --first-parent)
+          sed -i -e "s|VERSION = \".*\"|VERSION = \"`echo "${tag//v}"`\"|g" ./merlin/version.py
           python setup.py sdist bdist_wheel
           twine upload dist/*
